--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,5 +10,12 @@ project(
 
 set(SRC "src/main.cpp")
 set(CMAKE_CXX_STANDARD 17)
-
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 add_executable(${PROJECT_NAME} ${SRC})
+
+find_package (SQLite3)
+if (SQLITE3_FOUND)
+	include_directories(${SQLITE3_INCLUDE_DIRS})
+	target_link_libraries (${PROJECT_NAME} ${SQLITE3_LIBRARIES})
+endif (SQLITE3_FOUND)
+
